<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".text_tips">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="716dp">

        <TextView
            android:id="@+id/tipsheading"
            android:layout_width="411dp"
            android:layout_height="33dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/philosopher"
            android:freezesText="true"
            android:text="@string/defence_tips_string"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <ScrollView
            android:layout_width="413dp"
            android:layout_height="648dp"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarThumbVertical="@android:color/holo_blue_dark"
            android:scrollbarTrackVertical="@android:color/holo_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipsheading">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/paragraph"
                    android:layout_width="match_parent"
                    android:layout_height="158dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/maven_pro"
                    android:lineSpacingExtra="5sp"
                    android:padding="10dp"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:soundEffectsEnabled="true"
                    android:text="@string/paragraph_string"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    app:layout_column="0"
                    app:layout_row="0"></TextView>

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/tip1"
                    android:textColor="#1438FF"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_column="0"
                    app:layout_row="1" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/tip2"
                    android:textColor="#1438FF"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_column="0"
                    app:layout_row="2" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/tip3"
                    android:textColor="#1438FF"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_column="0"
                    app:layout_row="3" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/tip4"
                    android:textColor="#1438FF"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_column="0"
                    app:layout_row="4" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/tip5"
                    android:textColor="#1438FF"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_column="0"
                    app:layout_row="5" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/tip6"
                    android:textColor="#1438FF"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_column="0"
                    app:layout_row="6" />

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/tip7"
                    android:textColor="#1438FF"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_column="0"
                    app:layout_row="7" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/tip8"
                    android:textColor="#1438FF"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_column="0"
                    app:layout_row="8" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/tip9"
                    android:textColor="#1438FF"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_column="0"
                    app:layout_row="9" />

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/tip10"
                    android:textColor="#1438FF"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_column="0"
                    app:layout_row="10" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/tip11"
                    android:textColor="#1438FF"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_column="0"
                    app:layout_row="11" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>